--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-timer-hook": "^4.0.5",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.4.0",
     "wanakana": "^5.2.0",
     "zustand": "^5.0.3"
   },
